# ML_Basics

./: CMakeLists.txt
ML_Basics/: CMakeLists.txt  main.c  main.h
